// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBarWithSteps should render correctly with minSteps prop 1`] = `
<div>
  <div
    aria-valuemax="5"
    aria-valuemin="2"
    aria-valuenow="1"
    class="stepsWrapper additional-class-name"
    role="progressbar"
  >
    <div
      class="step required completed"
      data-testid="progress-step-0"
    />
    <div
      class="step required"
      data-testid="progress-step-1"
    />
    <div
      class="step"
      data-testid="progress-step-2"
    />
    <div
      class="step"
      data-testid="progress-step-3"
    />
    <div
      class="step"
      data-testid="progress-step-4"
    />
  </div>
</div>
`;

exports[`ProgressBarWithSteps should render correctly without minSteps prop 1`] = `
<div>
  <div
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="1"
    class="stepsWrapper additional-class-name"
    role="progressbar"
  >
    <div
      class="step completed"
      data-testid="progress-step-0"
    />
    <div
      class="step"
      data-testid="progress-step-1"
    />
    <div
      class="step"
      data-testid="progress-step-2"
    />
    <div
      class="step"
      data-testid="progress-step-3"
    />
    <div
      class="step"
      data-testid="progress-step-4"
    />
  </div>
</div>
`;
